test/sh/error/flow/comment_then_else.sk
# this wont work
else {
	noop
}
